2017-06-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* NEWS: Update for version 1.0.5.
	* configure.ac (AC_INIT): Bump version to 1.0.5.

2017-04-19         Manuel Collado       <m-collado@users.sourceforge.net>

	Fix build problem on recent Cygwin setup w.r.t. to the use of iconv.
	* Makefile.am (xml_la_LIBADD): Explicit reference to iconv.
	* configure.ac (AM_ICONV): Added, explicitly request iconv.

2017-01-27         Manuel Collado       <m-collado@users.sourceforge.net>

	* Makefile.am: Fix the build order: /doc after the root dir.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* NEWS: Update for version 1.0.4.
	* configure.ac (AC_INIT): Bump version to 1.0.4.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* xml_interface.c, xml_puller.c, xml_puller.h: Fix FSF address.

2016-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* NEWS: Update for version 1.0.3.
	* configure.ac (AC_INIT): Bump version to 1.0.3.

2014-12-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (xml_la_LDFLAGS): Use common define GAWKEXT_MODULE_FLAGS.
	* xml_interface.c (ext_version): Set to PACKAGE_STRING.

2014-12-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* xml_puller.c (XML_PullerIconv): Stop allocating an extra byte
	to match gawk conventions.  Arnold has indicated that there is no
	good reason for this.
	* xml_puller.h: Change comment to reflect the removal of the extra
	byte.

2014-11-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* NEWS: Update for version 1.0.2.
	* configure.ac (AC_INIT): Bump version to 1.0.2.  Fix m4 quoting bug.

2014-11-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* NEWS: Update for version 1.0.1.
	* configure.ac (AC_INIT): Bump version to 1.0.1.
	* xml_interface.c (init_my_module): Invoke GAWKEXTLIB_COMMON_INIT.
